# turicreate

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  build_capi.sh  configure
src/image/: CMakeLists.txt
src/lambda/: CMakeLists.txt
src/platform/parallel/: CMakeLists.txt  pthread_tools.hpp
src/unity/: CMakeLists.txt
src/unity/lib/: CMakeLists.txt  gl_sframe.cpp  gl_sframe.hpp  unity_global.cpp  unity_sarray.cpp  unity_sframe.cpp  variant.cpp
src/unity/lib/visualization/: CMakeLists.txt  boxes_and_whiskers.cpp  boxes_and_whiskers.hpp  categorical_heatmap.cpp  categorical_heatmap.hpp  heatmap.cpp  heatmap.hpp  histogram.cpp  histogram.hpp  io_buffer.cpp  io_buffer.hpp  item_frequency.cpp  item_frequency.hpp  pipe.pb.cc  pipe.pb.h  pipe.proto  plot.cpp  plot.hpp  process_wrapper.cpp  process_wrapper.hpp  protobuf_generated.cpp  scatter.cpp  server.cpp  server.hpp  server_impl.cpp  summary_view.cpp  summary_view.hpp  tcviz.proto  transformation.cpp  transformation.hpp  vega.3.0.proto  vega_data.cpp  vega_data.hpp  vega_spec.cpp  vega_spec.hpp
src/unity/lib/visualization/html/: style.css  vega.html
src/unity/lib/visualization/vega_spec/: config.json  histogram.json  summary_view.json
src/unity/python/turicreate/: CMakeLists.txt
src/unity/python/turicreate/data_structures/: sarray.py  sframe.py
src/unity/python/turicreate/toolkits/recommender/: item_content_recommender.py
src/unity/python/turicreate/visualization/: _plot.py
src/unity/server/: registration.cpp  unity_server.cpp  unity_server_control.cpp
src/unity/toolkits/activity_classification/: CMakeLists.txt
src/unity/toolkits/clustering/: CMakeLists.txt
src/unity/toolkits/coreml_export/: CMakeLists.txt
src/unity/toolkits/evaluation/: CMakeLists.txt
src/unity/toolkits/factorization/: CMakeLists.txt  model_factory.cpp  model_factory.hpp
src/unity/toolkits/feature_engineering/: CMakeLists.txt
src/unity/toolkits/graph_analytics/: CMakeLists.txt
src/unity/toolkits/image/: CMakeLists.txt
src/unity/toolkits/ml_data_2/: CMakeLists.txt  ml_data_entry.hpp
src/unity/toolkits/ml_model/: CMakeLists.txt
src/unity/toolkits/nearest_neighbors/: CMakeLists.txt
src/unity/toolkits/neural_net/: CMakeLists.txt
src/unity/toolkits/object_detection/: CMakeLists.txt
src/unity/toolkits/pattern_mining/: CMakeLists.txt
src/unity/toolkits/prototype/: CMakeLists.txt
src/unity/toolkits/recsys/: CMakeLists.txt
src/unity/toolkits/sgd/: CMakeLists.txt
src/unity/toolkits/sparse_similarity/: CMakeLists.txt
src/unity/toolkits/supervised_learning/: CMakeLists.txt  automatic_model_creation.cpp  logistic_regression.cpp  supervised_learning.cpp  supervised_learning.hpp  supervised_learning_utils-inl.hpp  xgboost.cpp
src/unity/toolkits/text/: CMakeLists.txt
src/unity/toolkits/util/: CMakeLists.txt
src/visualization/: CMakeLists.txt
src/visualization/SwiftProtobuf.framework/Versions/A/Headers/: SwiftProtobuf-Swift.h
src/visualization/SwiftProtobuf.framework/Versions/A/Modules/SwiftProtobuf.swiftmodule/: x86_64.swiftdoc
src/visualization/SwiftProtobuf.framework/Versions/A/Resources/: Info.plist
src/visualization/Turi Create Visualization/: vega_viz.html
src/visualization/Turi Create Visualization.xcodeproj/: project.pbxproj
src/visualization/Turi Create Visualization.xcodeproj/xcshareddata/xcschemes/: Turi Create Visualization.xcscheme
src/visualization/Turi Create Visualization/Base.lproj/: Main.storyboard
src/visualization/Turi Create Visualization/src/: AppDelegate.swift  Debugging.swift  JSON.swift  Pipe.swift  VegaContainer.swift  ViewController.swift  main.swift  pipe.pb.swift
src/visualization/Turi Create Visualization/src/SwiftProtobuf.framework/Versions/A/: SwiftProtobuf
src/visualization/Turi Create Visualization/src/SwiftProtobuf.framework/Versions/A/Modules/SwiftProtobuf.swiftmodule/: x86_64.swiftmodule
src/visualization/Turi Create Visualization/src/user_interface/: package-lock.json  package.json
src/visualization/Turi Create Visualization/src/user_interface/public/: index.css  index.html  index.js
src/visualization/Turi Create Visualization/src/user_interface/src/: client.js  tcviz.js
src/visualization/Turi Create Visualization/src/user_interface/src/elements/: fontawesome.js
src/visualization/Turi Create Visualization/src/user_interface/src/elements/Annotate/: index.js
src/visualization/Turi Create Visualization/src/user_interface/src/elements/Annotate/ErrorBar/: index.js
src/visualization/Turi Create Visualization/src/user_interface/src/elements/Annotate/InfiniteScroll/: index.js
src/visualization/Turi Create Visualization/src/user_interface/src/elements/Annotate/LabelContainer/: index.js
src/visualization/Turi Create Visualization/src/user_interface/src/elements/Annotate/LabelModal/: index.js
src/visualization/Turi Create Visualization/src/user_interface/src/elements/Plot/Chart/: index.js
src/visualization/client/: CMakeLists.txt
src/visualization/client/Turi Create Visualization.xcodeproj/: project.pbxproj
src/visualization/client/Turi Create Visualization/src/: AppDelegate.swift  Error.swift  JSON.swift  Pipe.swift  VegaContainer.swift  ViewController.swift  main.swift
src/visualization/client/Turi Create Visualization/src/user_interface/public/: index.css  index.html  index.js
src/visualization/client/Turi Create Visualization/src/user_interface/src/: tcviz.js
src/visualization/client/Turi Create Visualization/src/user_interface/src/elements/: fontawesome.js
src/visualization/client/Turi Create Visualization/src/user_interface/src/util/: classnamemap.ts
src/visualization/server/: process_wrapper.cpp  server.cpp  server.hpp
src/visualization/tools/: CMakeLists.txt  css_module_compiler.js  css_module_linker.js  sassmodulec.cpp
src/visualization/vega_renderer/: CMakeLists.txt  JSCanvas.h  JSCanvas.m  LogProxy.h  LogProxy.m  LogProxyHandler.h  LogProxyHandler.m  TCVegaRenderer.m  VegaRenderer.m
test/vega_renderer/: CMakeLists.txt  log_proxy_tests.cxx  log_proxy_tests.hpp  log_proxy_tests_impl.mm  turicreate_example_tests.cxx
(+192 files in other folders)
